added some styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,5 +10,5 @@
     <div #box_8 class="boxToClick flex justify-center" (click)="clickOnBox(box_8.id)"></div>
     <div #box_9 class="boxToClick flex justify-center" (click)="clickOnBox(box_9.id)"></div>
   </div>
-  <div #result class="self-center mt-3">{{resultsOfGame}}</div>
+  <div #result class="self-center mt-10 outputText">{{resultsOfGame}}</div>
 </div>
