--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap');
 .boxToClick{
     height: 20vh;
     line-height: 20vh;
@@ -17,4 +18,8 @@
 }
 .boxToClick:nth-of-type(n+7){
     border-bottom: none;
+}
+.outputText{
+    font-size: 2em;
+    font-family: 'Rubik', sans-serif;
 }
